--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</div>
 </div>
 	
-
+<div class="wrapper">
 <button id="btn_modal">Modal</button>
 <div class="modal_block">
 	<div class="modal_text">
@@ -31,8 +31,34 @@
 		<p>Модальное окно</p>
 	</div>
 </div>
+</div>
 
+<div class="wrapper">
+	<div class="tab">
+		<ul class="nav_tabs">
+			<li class="nav_item"><a class="nav_link active" href="#tab1">Tab1</a></li>
+			<li class="nav_item"><a class="nav_link" href="#tab2">Tab2</a></li>
+			<li class="nav_item"><a class="nav_link" href="#tab3">Tab3</a></li>
+		</ul>
+		<div class="content">
+		<div class="tab_content active" id="tab1">Tab1</div>
+		<div class="tab_content" id="tab2">Tab2</div>
+		<div class="tab_content" id="tab3">Tab3</div>
+		</div>
+	</div>
+</div>
 
+<div class="game">
+	<div class="game_item"></div>
+	<div class="game_item"></div>
+	<div class="game_item"></div>
+	<div class="game_item"></div>
+	<div class="game_item"></div>
+	<div class="game_item"></div>
+	<div class="game_item"></div>
+	<div class="game_item"></div>
+	<div class="game_item"></div>
+</div>
 
 <script src="js/main.js"></script>
 	
